better sample + stylin

--- a/uberdoc/templates/default.html
+++ b/uberdoc/templates/default.html
@@ -22,6 +22,7 @@ $if(highlighting-css)$
 $highlighting-css$
   </style>
 $endif$
+  <link rel="stylesheet" href="style/default.css" type="text/css" />
 $for(css)$
   <link rel="stylesheet" href="$css$">
 $endfor$
