--- a/uberdoc/templates/default.html
+++ b/uberdoc/templates/default.html
@@ -39,6 +39,7 @@ $endfor$
 </head>
 <body>
 <div class="nav">
+<h1>Contents</h1>
 <div class="navtools">
   <a href="#" id="nt-all"> + </a>|<a href="#" id="nt-none"> - </a>|<a href="#" id="nt-l1"> 1 </a>|<a href="#" id="nt-l2"> 2 </a>|<a href="#" id="nt-l3"> 3 </a>
 </div>
