--- a/uberdoc/style/default.css
+++ b/uberdoc/style/default.css
@@ -70,53 +70,51 @@ h4:before {content:counter(counter-h1) "." counter(counter-h2) "." counter(count
 table {
 	border-top: 1px solid black;
 	border-bottom: 1px solid black;
-	caption-side:bottom; counter-increment: counter-table;}
+	caption-side:bottom; counter-increment: counter-table; margin-bottom: 20px; margin-top: 20px;}
 table caption {font-size: 12px; text-align: left; padding: 10px 0px 10px 0px;}
 table caption:before {content: "Table " counter(counter-table) ": ";}
+td, th {padding: 0px 10px 10px 0px; vertical-align: top;}
 
-.figure p.caption {counter-increment: counter-figure;}
+
+.figure {text-align: center; counter-increment: counter-figure;}
 .figure p.caption {font-size: 12px;}
 .figure p.caption:before {content: "Figure " counter(counter-figure) ": ";}
 
+
+
+ul.jqtree-tree .jqtree-title {color: white; font-size: 12px;}
+
 /* navigation */
-.nav {font-size: 12px; color:white;}
 .nav h1:before {content:none}
-.nav ol {counter-reset:item; color:#99a0a3}
-.nav ol > li {display:block}
-.nav ol > li:before {content:counters(item, ".") " "; counter-increment:item; float:left; margin-right:.6em}
-.nav ol > li > a {display:block; overflow:hidden}
-.nav ul, .nav ol {padding:0 0 .6em 10px}
-.nav a {color: white; text-decoration: none;}
-.nav a:hover {color: white; text-decoration: underline;}
-
-.navtools {font-size: 16px; margin-left: 20px;}
-.nav a:hover {text-decoration: none;}
-
-ul.jqtree-tree .jqtree-title {color: white;}
-
 
 @media screen {
-	.nav {position:fixed; z-index:99; top:0; left:0; bottom:0; width:200px; background:#535353;
-
-	 border-right:1px solid #d3e0e6; padding:10px 10px 20px 10px; overflow:hidden; opacity:.98; box-shadow:0 0 5px rgba(0,0,0,.1);}
-/**
-	.nav:hover {width:450px; overflow:auto; background:#ecf3f6}
-	.nav h1 {position:fixed; top:142px; left:58px; width:0; height:0; text-align:right; font-size:14px; line-height:1; font-weight:bold; text-transform:uppercase; color:#b9c0c3; -moz-transform:rotate(270deg); -ms-transform:rotate(270deg); -o-transform:rotate(270deg); -webkit-transform:rotate(270deg); transform:rotate(270deg)
+	.nav {position:fixed; z-index:99; top:0; left:0; bottom:0; width:0; background:#535353; border-right:1px solid #d3e0e6; padding:10px 10px 20px 30px; overflow:hidden;box-shadow:0 0 5px rgba(0,0,0,.1);
+		-moz-transition:width .3s, background .3s; -o-transition:width .3s, background .3s; -webkit-transition:width .3s, background .3s; transition:width .3s, background .3s}
+	.nav:hover {width:300px; overflow:auto; background:#535353}
+	.nav h1 {position:fixed; top:70px; left:58px; width:0; height:0; text-align:right; font-size:14px; line-height:1; font-weight:bold; text-transform:uppercase; color:#b9c0c3; -moz-transform:rotate(270deg); -ms-transform:rotate(270deg); -o-transform:rotate(270deg); -webkit-transform:rotate(270deg); transform:rotate(270deg)
 		-moz-transition:opacity .3s; -o-transition:opacity .3s; -webkit-transition:opacity .3s; transition:opacity .3s}
 	.nav:hover h1 {opacity:.33}
-	.nav > ol, .nav > ul {width:400px; font-size:12px; visibility:hidden}
-	.nav:hover > ol, .nav:hover > ul {visibility:visible}
-**/
+
+	.navtree {margin: 10px 10px 10px 25px;}
+	.navtree ul, ol {margin: 0px;}
+	.nav .navtree {visibility:hidden;}
+	.nav:hover .navtree {visibility:visible;}
+	.nav .navtools {visibility:hidden;}
+	.nav:hover .navtools {visibility:visible;}
+	.navtools {font-size: 16px; margin-left: 20px; color: white;}
+	.nav a:hover {text-decoration: none;}
+	.nav a {color: white; text-decoration: none;}
+	.hnum {color: #aaaaaa;}
 }
 
-/**
-@media screen and (min-width:1600px) {
-	html {padding-left:510px;}
-	.nav {width:450px; overflow:auto; background:#ecf3f6}
+@media screen and (min-width:1200px) {
+	html {padding-left:300px;}
+	.nav {width:300px; overflow:auto; background:#535353}
 	.nav:hover h1 {opacity:1}
-	.nav > ol, .nav > ul {visibility:visible}
+	.nav .navtools {visibility:visible;}
+	.nav .navtree {visibility:visible;}
 }
-**/
+
 
 pre {
 	background-color: #f8f8f8;
