--- a/style/default.css
+++ b/style/default.css
@@ -44,11 +44,11 @@ textarea {overflow:auto;vertical-align:top}
 table {border-collapse:separate;border-spacing:0}
 
 html {
-	background:#f2f2f2; 
-	font-size:14px; 
+	background:#f2f2f2;
+	font-size:14px;
 	padding:0 20px
 }
-body {background:#fff; margin:30px auto; padding:10px 30px 20px 80px; max-width:800px; 
+body {background:#fff; margin:30px auto; padding:10px 30px 20px 80px; max-width:800px;
 	box-shadow:0 5px 40px rgba(0,0,0,.2)
 	text-rendering: optimizeLegibility;
 	font-family: "Verdana";
@@ -68,16 +68,63 @@ h3:before {content:counter(counter-h1) "." counter(counter-h2) "." counter(count
 h4:before {content:counter(counter-h1) "." counter(counter-h2) "." counter(counter-h3) "." counter(counter-h4) " "}
 
 table {
-	border-top: 1px solid black; 
-	border-bottom: 1px solid black; 
-	caption-side:bottom; counter-increment: counter-table;}
+	border-top: 1px solid black;
+	border-bottom: 1px solid black;
+	caption-side:bottom; counter-increment: counter-table; margin-bottom: 20px; margin-top: 20px;}
 table caption {font-size: 12px; text-align: left; padding: 10px 0px 10px 0px;}
 table caption:before {content: "Table " counter(counter-table) ": ";}
+td, th {padding: 0px 10px 10px 0px; vertical-align: top;}
 
-.figure p.caption {counter-increment: counter-figure;}
+
+.figure {text-align: center; counter-increment: counter-figure;}
 .figure p.caption {font-size: 12px;}
 .figure p.caption:before {content: "Figure " counter(counter-figure) ": ";}
 
+
+
+ul.jqtree-tree .jqtree-title {color: white; font-size: 12px;}
+
+/* navigation */
+.nav h1:before {content:none}
+
+@media screen {
+	.nav {position:fixed; z-index:99; top:0; left:0; bottom:0; width:0; background:#535353; border-right:1px solid #d3e0e6; padding:10px 10px 20px 30px; overflow:hidden;box-shadow:0 0 5px rgba(0,0,0,.1);
+		-moz-transition:width .3s, background .3s; -o-transition:width .3s, background .3s; -webkit-transition:width .3s, background .3s; transition:width .3s, background .3s}
+	.nav:hover {width:300px; overflow:auto; background:#535353}
+	.nav h1 {position:fixed; top:70px; left:58px; width:0; height:0; text-align:right; font-size:14px; line-height:1; font-weight:bold; text-transform:uppercase; color:#b9c0c3; -moz-transform:rotate(270deg); -ms-transform:rotate(270deg); -o-transform:rotate(270deg); -webkit-transform:rotate(270deg); transform:rotate(270deg)
+		-moz-transition:opacity .3s; -o-transition:opacity .3s; -webkit-transition:opacity .3s; transition:opacity .3s}
+	.nav:hover h1 {opacity:.33}
+
+	.navtree {margin: 10px 10px 10px 25px;}
+	.navtree ul, ol {margin: 0px;}
+	.nav .navtree {visibility:hidden;}
+	.nav:hover .navtree {visibility:visible;}
+	.nav .navtools {visibility:hidden;}
+	.nav:hover .navtools {visibility:visible;}
+	.navtools {font-size: 16px; margin-left: 20px; color: white;}
+	.nav a:hover {text-decoration: none;}
+	.nav a {color: white; text-decoration: none;}
+	.hnum {color: #aaaaaa;}
+}
+
+@media screen and (min-width:1200px) {
+	html {padding-left:300px;}
+	.nav {width:300px; overflow:auto; background:#535353}
+	.nav:hover h1 {opacity:1}
+	.nav .navtools {visibility:visible;}
+	.nav .navtree {visibility:visible;}
+}
+
+
+pre {
+	background-color: #f8f8f8;
+	border: 1px solid #ddd;
+	font-size: 13px;
+	line-height: 19px;
+	overflow: auto;
+	padding: 6px 10px;
+	border-radius: 3px;
+}
 
 /* header stylin */
 header h1 {margin: 0px; padding: 10px;}
@@ -90,7 +137,7 @@ header h1 {font-size: 30px; border-bottom: none; text-align: center;}
 header h2 {font-size: 15px; border-bottom: none; text-align: center;}
 header h3 {font-size: 15px; border-bottom: none; text-align: center;}
 header h4 {font-size: 15px; border-bottom: none; text-align: center;}
-header h1:before {content:""; }
+header h1:before {content:""; min-width: 0px;}
 header h2:before {content:""; display: inline; }
 header h3:before {content:"";}
 header h4:before {content:"";}
